# michelson-kernel

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  michelson_quickstart.ipynb  post-install.py  pyproject.toml  pytezos-3.0.4-py3-none-any.whl  setup.py  tzbtc_big_map_diff_parser.ipynb
michelson_kernel/: __main__.py  docs.py  kernel.js  kernel.py  suggest.py
scripts/: gen_docs_py.py
src/michelson_kernel/: __main__.py  docs.py  kernel.py
