[tool]
[tool.poetry]
name = "michelson-kernel"
version = "0.1.6"
description = "Jupyter kernel for the Michelson language"
license = "MIT"
keywords = ["Tezos", "Michelson", "Jupyter"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: System :: Shells",
    "Framework :: IPython",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
homepage = "https://github.com/baking-bad/michelson-kernel"
authors = ["Michael Zaikin (Baking Bad) <mz@baking-bad.org>"]
readme = "README.md"
packages = [
    { include = "michelson_kernel", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
tabulate = "^0.7.5"
ipykernel = "^5.5.0"
jupyter-client = "^6.1.12"
pytezos = {path = "pytezos-3.0.4-py3-none-any.whl"}
attrs = "^20.3.0"
notebook = "^6.3.0"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
black = "^20.8b1"
mypy = "^0.812"
pylint = "^2.7.2"
pylint-exit = "^1.2.0"
